gl33-master/src/test/deca/syntax/invalid/others/bracketManquantClasse.deca
//Test invalid: bracket manquant pour la classe

class MyClass
  int a;
}


{

}
